added update user endpoint